tests/duarouter/function/skip_routing/invalid/gaps_alt/alts.duarouter
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2024-04-29 13:52:23 by Eclipse SUMO duarouter Version v1_19_0+1975-c861cc8fbcc
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
This file may also be made available under the following Secondary
Licenses when the conditions for such availability set forth in the Eclipse
Public License 2.0 are satisfied: GNU General Public License, version 2
or later which is available at
https://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html
SPDX-License-Identifier: EPL-2.0 OR GPL-2.0-or-later
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/duarouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
        <route-files value="input_alts.rou.alt.xml"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
        <write-license value="true"/>
    </output>

    <processing>
        <skip-new-routes value="true"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <vehicle id="left" depart="0.00" color="black">
        <routeDistribution last="0">
            <route cost="126.34" probability="1.00000000" edges="beg beg2left left left2end end rend"/>
        </routeDistribution>
    </vehicle>
    <vehicle id="left_gap" depart="0.00" color="black">
        <routeDistribution last="1">
            <route cost="90.43" probability="0.52104854" edges="beg beg2left left2end end rend"/>
            <route cost="125.90" probability="0.47895146" edges="beg middle end rend"/>
        </routeDistribution>
    </vehicle>
    <vehicle id="middle" depart="0.00" color="black">
        <routeDistribution last="0">
            <route cost="125.90" probability="1.00000000" edges="beg middle end rend"/>
        </routeDistribution>
    </vehicle>
    <vehicle id="middle_gap" depart="0.00" color="black">
        <routeDistribution last="0">
            <route cost="107.91" probability="0.50967141" edges="beg middle rend"/>
            <route cost="125.90" probability="0.49032859" edges="beg middle end rend"/>
        </routeDistribution>
    </vehicle>
</routes>
